-visitor, user, admin have all different home view -they all see different navigation tabs -updated the login page to better design -improved security

--- a/DreamSchedulerApplication/Views/Home/Database.cshtml
+++ b/DreamSchedulerApplication/Views/Home/Database.cshtml
@@ -3,25 +3,11 @@
 }
 
 <div class="jumbotron">
-    <h1>Neo4j working</h1>
+    <h1>DATABASE PAGE</h1>
 </div>
 
 <div>
-    <div>
-        <b>Test of query- insert a node : label User with   Id = 456, Name = "Jim"</b>
-        <br />
-        <br />
 
+    <input type="button" class="btn btn-primary btn-lg btn-block" value="Update database" onclick="'#'" />
 
-        <b>Retrieve that node from the dabase, output Id info and output name info</b>
-        <br />
-        <br />
-
-
-
-        id => @ViewBag.id
-        <br />
-        Name => @ViewBag.name
-
-    </div>
 </div>
