--- a/DreamSchedulerApplication/Views/Shared/_Layout.cshtml
+++ b/DreamSchedulerApplication/Views/Shared/_Layout.cshtml
@@ -19,12 +19,28 @@
                 @Html.ActionLink("DreamScheduler", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("StudentRecord", "StudentRecord", "Home")</li>
-                </ul>
+                <!--if else statement : if user show user nav tab, if admin show different nav tab-->
+                @{
+                    if (Session["User"] != null)
+                    {
+                        if ((string)Session["User"] == "admin")
+                        {
+                            <ul class="nav navbar-nav">
+                                <li>@Html.ActionLink("Home", "HomeAdmin", "Home")</li>
+                                <li>@Html.ActionLink("Database", "Database", "Home")</li>
+                            </ul>
+                        }
+                        else
+                        {
+                            <ul class="nav navbar-nav">
+                                <li>@Html.ActionLink("Home", "Home", "Home")</li>
+                                <li>@Html.ActionLink("Sequence", "Sequence", "Home")</li>
+                                <li>@Html.ActionLink("StudentRecord", "StudentRecord", "Home")</li>
+                            </ul>
+                        }
+                    }
+                }
+
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav navbar-nav navbar-right">
                         <!--MAGIC...  check if user is logged in, if no link to login, else show username and dropdown list-->
@@ -35,19 +51,19 @@
                             }
                             else
                             {
-                                //user is logged in, output username 
+                                //user is logged in, output username
                                 ViewBag.SessionUser = Session["User"];
                                 <a href="#" data-toggle="dropdown" class="dropdown-toggle"><b>@ViewBag.SessionUser</b><b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">MyAccount</a></li>
+                                    <li><a href="@Url.Action("Account", "Home")">MyAccount</a></li>
                                     <li><a href="#">action</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="@Url.Action("Logout", "Home")">Logout</a></li> 
+                                    <li><a href="@Url.Action("Logout", "Home")">Logout</a></li>
                                 </ul>
                             }
-}
+                        }
                     </li>
-                </ul>     
+                </ul>
             </div>
         </div>
     </div>
