--- a/DreamSchedulerApplication/Views/Home/Create.cshtml
+++ b/DreamSchedulerApplication/Views/Home/Create.cshtml
@@ -1,30 +1,41 @@
-﻿
-@model DreamSchedulerApplication.Models.LoginTest
+﻿@model DreamSchedulerApplication.Models.LoginTest
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
 
-<!--Create form-->
-@using (Html.BeginForm("CreateValidation", "Home"))
-{
-    <fieldset>
-        @Html.Label("Login")
-        <br />
-        <br />
-        @Html.LabelFor(model => model.Username)
-        @Html.TextBoxFor(model => model.Username, new { @class = "form-control" })
-        <b class="alert-danger">@ViewBag.errorUsername</b>
-        <b class="alert-warning">@Html.ValidationMessageFor(model => model.Username)</b>
-        <br />
-        @Html.LabelFor(model => model.Password)
-        @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
-        <b class="alert-warning">@ViewBag.errorPassword</b>
-        <b class="alert-warning">@Html.ValidationMessageFor(model => model.Password)</b>
-        <br />
-        <br />
-        <p><button class="btn btn-primary" type="submit">Submit</button></p>
-    </fieldset>
-}
-@{Html.EndForm();}
+
+
+<div class="row">
+    <h2>Create</h2>
+    <div class="col-md-4">
+        <!--empty-->
+    </div>
+
+    <div class="col-md-4">
+        <!--create form-->
+        @using (Html.BeginForm("CreateValidation", "Home"))
+        {
+            <fieldset>
+                <br />
+                <br />
+                @Html.LabelFor(model => model.Username)
+                @Html.TextBoxFor(model => model.Username, new { @class = "form-control" })
+                <b class="alert-danger">@ViewBag.errorUsername</b>
+                <b class="alert-warning">@Html.ValidationMessageFor(model => model.Username)</b>
+                <br />
+                @Html.LabelFor(model => model.Password)
+                @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+                <b class="alert-warning">@ViewBag.errorPassword</b>
+                <b class="alert-warning">@Html.ValidationMessageFor(model => model.Password)</b>
+                <br />
+                <br />
+                <p><button class="btn btn-primary" type="submit">Sign in</button></p>
+            </fieldset>
+        }
+        @{Html.EndForm();}
+    </div>
+    <div class="col-md-4">
+        <!--empty-->
+    </div>
+</div>
