--- a/DreamSchedulerApplication/Views/Home/Index.cshtml
+++ b/DreamSchedulerApplication/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
     <div class="col-md-4"></div>
     <div class="col-md-4">
 
-        <input type="button" class="btn btn-primary btn-lg btn-block" value="Join" onclick="location.href='@Url.Action("Login", "Home" )'" />
+        <input type="button" class="btn btn-primary btn-lg btn-block" value="Join" onclick="location.href='@Url.Action("Login", "Account" )'" />
     </div>
     <div class="col-md-4"></div>
 </div>
