--- a/DreamSchedulerApplication/Views/Member/Index.cshtml
+++ b/DreamSchedulerApplication/Views/Member/Index.cshtml
@@ -1,9 +1,12 @@
-﻿
-@{
-    ViewBag.Title = "Home";
+﻿@{
+    ViewBag.Title = "member Home Page";
 }
 
+<div class="jumbotron">
+    <h1>INDEX PAGE - Home</h1>
 
+
+</div>
 
 <div class="row">
     <div class="col-sm-6 col-md-4">
@@ -12,7 +15,7 @@
             <img src="~/Content/images/sequencelogo.png" alt="...">
             <div class="caption">
                 <h2>Make sequence</h2>
-                <p><a href="@Url.Action("Scheduler", "Home")" class="btn btn-success" role="button">Button</a></p>
+                <p><a href="#" class="btn btn-success" role="button">Button</a></p>
             </div>
         </div>
     </div>
@@ -22,7 +25,7 @@
             <img src="~/Content/images/courselogo.png" alt="...">
             <div class="caption">
                 <h2>Browse Courses</h2>
-                <p><a href="@Url.Action("Courses", "Home")" class="btn btn-success" role="button">Button</a></p>
+                <p><a href="@Url.Action("Courses", "Member")" class="btn btn-success" role="button">Button</a></p>
             </div>
         </div>
     </div>
@@ -32,7 +35,7 @@
             <img src="~/Content/images/contactlogo.png" alt="...">
             <div class="caption">
                 <h2>Browse Professors</h2>
-                <p><a href="@Url.Action("Professors", "Home")" class="btn btn-success" role="button">Button</a></p>
+                <p><a href="@Url.Action("Professors", "Member")" class="btn btn-success" role="button">Button</a></p>
             </div>
         </div>
     </div>
