--- a/DreamSchedulerApplication/Views/Member/AcademicRecord.cshtml
+++ b/DreamSchedulerApplication/Views/Member/AcademicRecord.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DreamSchedulerApplication.Models.AcademicRecord
 
 @{
-    ViewBag.Title = "StudentRecord";
+    ViewBag.Title = "AcademicRecord";
 }
 
-<h2 style="margin-bottom: 40px">StudentRecord</h2>
+<h2 style="margin-bottom: 40px">AcademicRecord</h2>
 
 
 <p>Student Name:  @Html.DisplayFor(model => model.Student.FirstName) @Html.DisplayFor(model => model.Student.LastName)</p>
