--- a/DreamSchedulerApplication/Views/Shared/_Layout.cshtml
+++ b/DreamSchedulerApplication/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <ul class="nav navbar-nav">
                                 <li>@Html.ActionLink("Home", "Index", "Member")</li>
                                 <li>@Html.ActionLink("Sequence", "CourseSequence", "Member")</li>
-                                <li>@Html.ActionLink("StudentRecord", "AcademicRecord", "Member")</li>
+                                <li>@Html.ActionLink("AcademicRecord", "AcademicRecord", "Member")</li>
                             </ul>
                         }
                     }
