--- a/DreamSchedulerApplication/Views/Home/AccountEdit.cshtml
+++ b/DreamSchedulerApplication/Views/Home/AccountEdit.cshtml
@@ -4,31 +4,44 @@
     ViewBag.Username = Session["User"];
 }
 
-<h2>Account Page</h2>
+<h2>Account EDIT Page</h2>
 
-<p>Username:  @ViewBag.Username</p>
-<p>StudentID : @Html.DisplayFor(model => model.Student.StudentID)</p>
-<p>First Name:@Html.DisplayFor(model => model.Student.FirstName)</p>
-<p>Last Name: @Html.DisplayFor(model => model.Student.LastName)</p>
 
-<a>EDIT</a>
-
-@using (Html.BeginForm("AccountEdit", "Home", FormMethod.Post))
+@using (Html.BeginForm("AccountEdit", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-    @Html.ValidationSummary(true)
+    @Html.AntiForgeryToken()
+    <h4>Modify your information</h4>
+    <hr />
+    @Html.ValidationSummary("", new { @class = "text-danger" })
+
     <fieldset>
-        @Html.LabelFor(model =>model.Student.FirstName)
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Student.FirstName)
-            @Html.ValidationMessageFor(model =>model.Student.FirstName)
-        </div>
-        @Html.LabelFor(model => model.Student.LastName)
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Student.LastName)
-            @Html.ValidationMessageFor(model => model.Student.LastName)
+        <div>
+            @Html.HiddenFor(model => model.Student.StudentID) <!--hidenFor is used when you need keep data private and still past using submit-->
         </div>
         <div>
-            <input type="submit" value="save" />
+            @Html.HiddenFor(model => model.Student.GPA)
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Student.FirstName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Student.FirstName, new { htmlAttributes = new { @class = "form-control" }, })
+                @Html.ValidationMessageFor(model => model.Student.FirstName)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Student.LastName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Student.LastName, new { htmlAttributes = new { @class = "form-control" }, })
+                @Html.ValidationMessageFor(model => model.Student.LastName)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-primary" value="Save" />
+            </div>
         </div>
     </fieldset>
 }
+
