- merging security measure with Iliya - added  ninject (Iliya) - move the editaccount to manage controller

--- a/DreamSchedulerApplication/Views/Admin/Database.cshtml
+++ b/DreamSchedulerApplication/Views/Admin/Database.cshtml
@@ -8,6 +8,6 @@
 
 <div>
 
-    <input type="button" class="btn btn-primary btn-lg btn-block" value="Update database" onclick="'#'" />
-
+    <a href="@Url.Action("DatabaseUpdate", "Admin")" class="btn btn-primary btn-lg btn-block">Update Database</a>
+    <a href="@Url.Action("Json", "Admin")" class="btn btn-primary btn-lg btn-block">Update Database</a>
 </div>
