--- a/DreamSchedulerApplication/Views/Shared/_Layout.cshtml
+++ b/DreamSchedulerApplication/Views/Shared/_Layout.cshtml
@@ -1,10 +1,4 @@
-﻿@using DreamSchedulerApplication.Security;
-@{
-    var data = new PrivateData();
-    string myrole = data.GetUserRole();
-    string myname =  HttpContext.Current.User.Identity.Name;
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -14,72 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("DreamScheduler", "Index", myrole, new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <!--if else statement : if user show user nav tab, if admin show different nav tab-->
-                @{
-                    
-                    if (User.Identity.IsAuthenticated)
-                    {
-                        if ( myrole== "Admin")
-                        {
-                            <ul class="nav navbar-nav">
-                                <li>@Html.ActionLink("Home", "Index", "Admin")</li>
-                                <li>@Html.ActionLink("Database", "Database", "Admin")</li>
-                            </ul>
-                        }
-                        else
-                        {
-                            <ul class="nav navbar-nav">
-                                <li>@Html.ActionLink("Home", "Index", "Member")</li>
-                                <li>@Html.ActionLink("Sequence", "CourseSequence", "Member")</li>
-                                <li>@Html.ActionLink("AcademicRecord", "AcademicRecord", "Member")</li>
-                            </ul>
-                        }
-                    }
-                }
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="nav navbar-nav navbar-right">
-                        <!--MAGIC...  check if user is logged in, if no link to login, else show username and dropdown list-->
-                       
-                        @{
-                            
-                            if (!User.Identity.IsAuthenticated)
-                            {
-                                <a href="@Url.Action("Login", "Account")"><b>Login</b></a>
-                            }
-                            else
-                            {
-                                
-
-                        
-                                //user is logged in, output username
-                                ViewBag.SessionUser = myname;
-                                <a href="#" data-toggle="dropdown" class="dropdown-toggle"><b>@ViewBag.SessionUser
-                                    </b><b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="@Url.Action("Account", "Home")">MyAccount</a></li>
-                                    <li><a href="#">action</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="@Url.Action("LogOff", "Account")">Logout</a></li>
-                                </ul>
-                            }
-                        }
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    @Html.Partial("_NavBarPartial")
     <div class="container body-content">
         @RenderBody()
         <hr />
