added professors pictures added professor page : list of professors + popup with more info
added course json to model function : working
in progress : need to find way to do model to neo4j ( neo4j doesn't accept list/arrays )

--- a/DreamSchedulerApplication/Views/Admin/Database.cshtml
+++ b/DreamSchedulerApplication/Views/Admin/Database.cshtml
@@ -8,6 +8,6 @@
 
 <div>
 
-    <a href="@Url.Action("DatabaseUpdate", "Admin")" class="btn btn-primary btn-lg btn-block">Update Database</a>
-    <a href="@Url.Action("Json", "Admin")" class="btn btn-primary btn-lg btn-block">Update Database</a>
+    <a href="@Url.Action("DatabaseUpdate", "Admin")" class="btn btn-primary btn-lg btn-block">will be use to load course list</a>
+    <a href="@Url.Action("JsonProfessors", "Admin")" class="btn btn-primary btn-lg btn-block">update professor list</a>
 </div>
