--- a/DreamSchedulerApplication/Views/Student/Index.cshtml
+++ b/DreamSchedulerApplication/Views/Student/Index.cshtml
@@ -25,7 +25,7 @@
             <img src="~/Content/images/courselogo.png" alt="...">
             <div class="caption">
                 <h2>Browse Courses</h2>
-                <p><a href="@Url.Action("Courses", "Member")" class="btn btn-success" role="button">Button</a></p>
+                <p><a href="@Url.Action("Courses", "Student")" class="btn btn-success" role="button">Button</a></p>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
             <img src="~/Content/images/contactlogo.png" alt="...">
             <div class="caption">
                 <h2>Browse Professors</h2>
-                <p><a href="@Url.Action("Professors", "Member")" class="btn btn-success" role="button">Button</a></p>
+                <p><a href="@Url.Action("Professors", "Student")" class="btn btn-success" role="button">Button</a></p>
             </div>
         </div>
     </div>
