- modified addcourse/editcourse/deleteCourse to match the course from the database - cleanup :  smaller neo4 query

--- a/DreamSchedulerApplication/Views/AcademicRecord/EditCourseEntry.cshtml
+++ b/DreamSchedulerApplication/Views/AcademicRecord/EditCourseEntry.cshtml
@@ -15,14 +15,16 @@
         <h4>Movie</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Course.Code)
-        @Html.HiddenFor(model => model.Course.Title)
+        @Html.HiddenFor(model => model.Course.courseName)
+        @Html.HiddenFor(model => model.Course.CourseDescription)
         @Html.HiddenFor(model => model.Course.Credits)
+        @Html.HiddenFor(model => model.Course.Prerequisites)
+        @Html.HiddenFor(model => model.Course.Restrictions)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Course.Code, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Course.courseName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DisplayFor(model => model.Course.Code)
+                @Html.DisplayFor(model => model.Course.courseName)
             </div>
         </div>
 
