--- a/DreamSchedulerApplication/Views/Manage/AccountEdit.cshtml
+++ b/DreamSchedulerApplication/Views/Manage/AccountEdit.cshtml
@@ -6,7 +6,7 @@
 <h2>Account EDIT Page</h2>
 
 
-@using (Html.BeginForm("Index", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("AccountEdit", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Modify your information</h4>
