--- a/DreamSchedulerApplication/Views/Student/Professors.cshtml
+++ b/DreamSchedulerApplication/Views/Student/Professors.cshtml
@@ -8,8 +8,8 @@
 
 <table class="table">
 
-    <caption style="margin-bottom: 30px; font-weight: bold">Professor List</caption>
-    <tr>
+    <caption style="margin-bottom: 30px; font-weight: bold"><h3>Professor List</h3></caption>
+    <tr class="btn-primary">
         <th>
             Professor Name
         </th>
