--- a/DreamSchedulerApplication/Views/Student/Professors.cshtml
+++ b/DreamSchedulerApplication/Views/Student/Professors.cshtml
@@ -9,7 +9,7 @@
 <table class="table">
 
     <caption style="margin-bottom: 30px; font-weight: bold"><h3>Professor List</h3></caption>
-    <tr class="btn-primary">
+    <tr class="success">
         <th>
             Professor Name
         </th>
