--- a/DreamSchedulerApplication/Views/AcademicRecord/CreateCourseEntry.cshtml
+++ b/DreamSchedulerApplication/Views/AcademicRecord/CreateCourseEntry.cshtml
@@ -15,10 +15,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Course.courseName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Course.Code, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Course.courseName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Course.courseName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Course.Code, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Course.Code, "", new { @class = "text-danger" })
             </div>
         </div>
 
