--- a/DreamSchedulerApplication/Views/AcademicRecord/DeleteCourseEntry.cshtml
+++ b/DreamSchedulerApplication/Views/AcademicRecord/DeleteCourseEntry.cshtml
@@ -12,19 +12,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Course.courseName)
+            @Html.DisplayNameFor(model => model.Course.Code)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Course.courseName)
+            @Html.DisplayFor(model => model.Course.Code)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Course.CourseDescription)
+            @Html.DisplayNameFor(model => model.Course.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Course.CourseDescription)
+            @Html.DisplayFor(model => model.Course.Title)
         </dd>
 
         <dt>
